# Camera-Organizer

./: .gitignore  Makefile  README.md  TIFF-HEIC_Plan.md  TODO.md  pyproject.toml
examples/: ff-680_example.exiftool.metadata.json  ff-680_example.pillow.metadata.json  perfection_v39-ii_example.exiftool.metadata.json  perfection_v39-ii_example.pillow.metadata.json  report_20260201_213518.json  report_20260201_213703.json  report_20260202_155726.json  report_20260202_160244.json  report_20260202_165013.json  report_20260202_165101.json
helper_tools/: env_sanity_check.py  metadata_extractor.py  tkinter_sanity_check.py
notes/: GENERIC_PLAN.md  GOALS.md  GUI_CONSTRAINTS.md  current_state.md
src/: launcher.py
src/camera_organizer/: camera_models.txt  camera_models_db.py  folder_renamer_gui.py  main.py  organizer_gui.py  renamer_gui.py
src/camera_organizer/helper_tools/: tk_tooltip.py
src/converter/: core.py  gui.py
src/organizer/: core.py  gui.py
src/photo_organizer/: __init__.py  launcher.py
src/photo_organizer/converter/: __init__.py  core.py  gui.py  variant_selection.py
src/photo_organizer/data/: camera_models_seed.json
src/photo_organizer/organizer/: __init__.py  core.py  gui.py
src/photo_organizer/renamer/: __init__.py  batch_gui.py  folder_gui.py
src/photo_organizer/shared/: __init__.py  camera_models.py  config.py  image_utils.py
src/renamer/: batch_gui.py  folder_gui.py
src/shared/: file_utils.py  gui_utils.py  metadata.py
