[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "photo-organizer"
version = "0.2.0"
description = "Comprehensive toolkit for organizing photos, videos, and scans"
readme = "README.md"
authors = ["Ulises Chavarria"]
license = "MIT"
packages = [
    { include = "shared", from = "src" },
    { include = "organizer", from = "src" },
    { include = "renamer", from = "src" },
    { include = "converter", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.11"
Pillow = "^10.0.0"
pillow-heif = "^0.13.0"
exifread = "^3.0.0"
tqdm = "^4.66.0"
appdirs = "^1.4.4"

[tool.poetry.scripts]
photo-organizer = "launcher:main"
